Add testing for pull requests as well as branches.
We really do need the pull requests to be tested, as otherwise people
presenting PRs don't get their code tested, which is sad.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,8 @@ on:
   push:
     branches: ["*"]
     tags: ["v*"]
-  # Pull request events happen on pull request state transitions, so we probably don't want this here.
-  #pull_request:
-  #  branches: ["*"]
+  pull_request:
+    branches: ["*"]
 
 jobs:
   build:
